# gotify-cli-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  notifier.rs  utils.rs
