[package]
name = "gotify-cli"
version = "0.1.0"
edition = "2024"
description = "Light CLI tool to send notifications to your Gotify server"
authors = ["jessielw <jessielwilson.1991@gmail.com>"]
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
